--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>War</title>
 </head>
 <body>
+
     <button id="new-deck">New Deck, Please!</button>
     <button id="draw-cards">Draw</button>
+    <div id="cards"></div>
     <script src="app.js"></script>
 
 </body>
