--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <button id="new-deck">New Deck, Please!</button>
-    <button id="draw-cards">Draw</button>
+    <button id="draw-cards" class="draw">Draw</button>
     <div id="cards"></div>
     <script src="app.js"></script>
 
