--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <button id="new-deck">New Deck, Please!</button>
+    <button id="new-deck">New Deck</button>
     <div id="cards"></div>
     <button id="draw-cards" class="draw">Draw</button>
     <script src="app.js"></script>
