working. just need to centre

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
     <button id="new-deck">New Deck</button>
-    <div id="cards"></div>
+    <div id="cards">
+        <div class="card-slot"></div>
+        <div class="card-slot"></div>
+    </div>
     <button id="draw-cards" class="draw">Draw</button>
     <script src="app.js"></script>
 
