still has an error when drawing cards

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>War</title>
-</head>
-<body>
-
-    <button id="new-deck">New Deck</button>
-    <div id="cards">
-        <div class="card-slot"></div>
-        <div class="card-slot"></div>
-    </div>
-    <button id="draw-cards" class="draw">Draw</button>
-    <script src="app.js"></script>
-
-</body>
-</html> 
+<html>
+    <head>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <button id="new-deck">New Deck</button>
+        <div id="cards">
+            <div class="card-slot"></div>
+            <div class="card-slot"></div>
+        </div>
+        <button id="draw-cards" class="draw">Draw</button>
+        <script src="app.js"></script>
+    </body>
+</html>
